# Zadanko

./: .gitignore  Dockerfile  README.md  pyproject.toml
zadanko/: manage.py
zadanko/user_anonymizer/: anonymizers.py  apps.py  models.py  utils.py  views.py
zadanko/user_anonymizer/management/commands/: anonymize_user.py
zadanko/user_anonymizer/migrations/: 0001_initial.py  0002_address_city_address_contact_email_and_more.py  0003_rename_portal_code_address_postal_code.py
zadanko/user_anonymizer/tests/: factories.py  test_anonymizer.py
zadanko/zadanko/: asgi.py  settings.py  urls.py  wsgi.py
